# hjrs-thesis

./: README.md  pyproject.toml
datasets/processed/: complete_crosswalk.csv  llm_meta_tasks.xlsx  llm_model_comparison.xlsx
datasets/raw/: Dashboard Study Results.xlsx  Skills-Framework-Dataset-2024.xlsx  dashboard_cognitive_data.xlsx  final_complete_esco_isco_crosswalk.xlsx  final_umap.csv  isco_codes_417_Including_PRESETS.xlsx  occupations_nl.csv  semantic_esco_crosswalk.csv  umap_ready_crosswalk.csv
src/1_unified_task_universe/: llm_meta_tasks_dict.pkl  task_extraction.ipynb
src/2_dashboard/: cognitive_data_1.xlsx  interactive_dashboard.py  jobs_and_meta_tasks.xlsx  llm_meta_tasks_modified.xlsx  llm_meta_tasks_nl.xlsx  requirements.txt
src/3_results_analysis/: model_comparison.ipynb
src/utils/: constants.py
src/utils/config/: dashboard_configuration.py  task_extraction_config.py  task_skills_config.py
src/utils/functions/: dashboard_functions.py  model_comparison_functions.py  task_extraction_functions.py  task_skills_functions.py
